Added melearning changes

--- a/less/vertical-items.less
+++ b/less/vertical-items.less
@@ -204,3 +204,22 @@
     }
   }
 }
+
+.verticalitems__top-inner, .verticalitems__bottom-inner {
+    background-color: #1110;
+}
+.verticalitems__item-icon, .verticalitems__container::before, .verticalitems__top-inner, .verticalitems__bottom-inner {
+    color: #222;
+    font-family: @title-family;
+}
+.verticalitems__item__content-title {
+    font-family: @title-family;
+}
+.verticalitems__item-icon {
+    background-color: #fff;
+    box-shadow: #22222226 0px 10px 10px 0;
+    border: solid 4px @primary-color;
+}
+.verticalitems__item__content p {
+    margin-bottom: 1rem;
+}
